# paligner

./: README.md  benchmark1.py  benchmark2.py  nw.py  pyproject.toml
caligner/: Makefile  caligner.c  pyproject.toml
cythonaligner/: cythonaligner.c  cythonaligner.html  cythonaligner.pyx  pyproject.toml  setup.py
raligner/: Cargo.toml  pyproject.toml  raligner.pyi
raligner/src/: lib.rs
