[project]
name = "paligner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "maturin>=1.7.4",
    "numpy>=1.27",
    "pendulum>=3.0.0",
    "pip>=24.3.1",
    "numba>=0.60.0",
    "setuptools>=75.6.0",
    "cython>=3.0.11",
]

[tool.pyright]
typeCheckingMode = "basic"
